--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -1460,6 +1460,7 @@ LIBSUBDIRS=	asyncio \
 		sqlite3 \
 		tkinter \
 		turtledemo \
+		msilib \
 		unittest \
 		urllib \
 		venv venv/scripts venv/scripts/common venv/scripts/posix \
